tests/specs/class_implements.txt
# mod.ts
export class Class implements Iterator {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class implements Iterator {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

class Class implements Iterator



# output.json
[
  {
    "kind": "class",
    "name": "Class",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": null,
      "implements": [
        {
          "repr": "Iterator",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "Iterator"
          }
        }
      ],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
